# ai-coding-benchmarks

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
benchmarks/cli-comparison/fixtures/python-async-processor/: README.md  pyproject.toml  requirements-dev.txt
benchmarks/cli-comparison/fixtures/python-async-processor/scripts/: check_asyncio_primitives.py  check_fix_documented.py
benchmarks/cli-comparison/fixtures/python-async-processor/src/: __init__.py  processor.py
benchmarks/cli-comparison/fixtures/python-async-processor/tests/: __init__.py  conftest.py  test_processor.py
benchmarks/cli-comparison/fixtures/python-pipeline-cache/: README.md  pyproject.toml
benchmarks/cli-comparison/fixtures/python-pipeline-cache/scripts/: check_cache_coherence.py  check_no_test_edits.py  setup-venv.sh
benchmarks/cli-comparison/fixtures/python-pipeline-cache/src/: __init__.py  cache.py  normalize.py  service.py  store.py
benchmarks/cli-comparison/fixtures/python-pipeline-cache/tests/: conftest.py  test_cache.py  test_normalize.py  test_service_integration.py  test_store.py
benchmarks/cli-comparison/fixtures/python-services-app/: README.md  pyproject.toml
benchmarks/cli-comparison/fixtures/python-services-app/baseline/: api_symbols.json
benchmarks/cli-comparison/fixtures/python-services-app/scripts/: check_api_compat.py  check_docstrings.py  check_no_duplication.py  check_no_test_edits.py  check_shared_module.py  check_type_hints.py
benchmarks/cli-comparison/fixtures/python-services-app/src/: __init__.py
benchmarks/cli-comparison/fixtures/python-services-app/src/services/: __init__.py  admin_service.py  order_service.py  user_service.py
benchmarks/cli-comparison/fixtures/python-services-app/src/shared/: __init__.py
benchmarks/cli-comparison/fixtures/python-services-app/tests/: __init__.py  test_admin_service.py  test_integration.py  test_order_service.py  test_user_service.py
examples/: compare-harnesses.experiment.json  experiment.sample.json  (+2 more)
(+221 files in other folders)
